test for options
Signed-off-by: Sebastian Hoß <sebhoss@pm.me>